--- a/TheRich/BUS/BUS.csproj
+++ b/TheRich/BUS/BUS.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{784E7E40-0610-4BC9-906E-516ADB13E046}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BUS</RootNamespace>
+    <RootNamespace>DAO</RootNamespace>
     <AssemblyName>BUS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -50,6 +50,16 @@
     <Compile Include="SanPham_BUS.cs" />
     <Compile Include="SPKhuyenMai_BUS.cs" />
     <Compile Include="ThuChi_BUS.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAO\DAO.csproj">
+      <Project>{f268a6f0-276c-4dc8-8f20-e63027f4d6af}</Project>
+      <Name>DAO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{5567ccd3-4d74-40e6-bf18-8802f2fa1e51}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
